--- a/article-preview-component/index.html
+++ b/article-preview-component/index.html
@@ -43,19 +43,36 @@
               <p class="meta_date">28 Jun 2020</p>
             </div>
             <div class="meta-control">
-              <button class="btn btn-share" id="primaryShareBtn">
+              <button
+                class="btn btn-share"
+                id="primaryShareBtn"
+                name="primary-share-btn"
+                aria-label="primary-share-btn"
+              >
                 <i class="fas fa-share"></i>
               </button>
 
               <div class="share-control">
                 <span class="share_title">SHARE</span>
-                <button class="btn">
+                <button
+                  class="btn"
+                  name="share-to-facebook"
+                  aria-label="facebook"
+                >
                   <i class="fab fa-facebook-square"></i>
                 </button>
-                <button class="btn">
+                <button
+                  class="btn"
+                  name="share-to-twitter"
+                  aria-label="twitter"
+                >
                   <i class="fab fa-twitter"></i>
                 </button>
-                <button class="btn">
+                <button
+                  class="btn"
+                  name="share-to-pinterest"
+                  aria-label="pinterest"
+                >
                   <i class="fab fa-pinterest"></i>
                 </button>
               </div>
@@ -66,18 +83,23 @@
         <div class="mobile-share-control">
           <div class="share-control_group">
             <span class="share_title">SHARE</span>
-            <button class="btn">
+            <button class="btn" name="facebook" aria-label="facebook">
               <i class="fab fa-facebook-square"></i>
             </button>
-            <button class="btn">
+            <button class="btn" name="twitter" aria-label="twitter">
               <i class="fab fa-twitter"></i>
             </button>
-            <button class="btn">
+            <button class="btn" name="pinterest" aria-label="pinterest">
               <i class="fab fa-pinterest"></i>
             </button>
           </div>
 
-          <button class="btn btn-share" id="secondaryShareBtn">
+          <button
+            class="btn btn-share"
+            id="secondaryShareBtn"
+            name="secondary-share-btn"
+            aria-label="secondary-share-btn"
+          >
             <i class="fas fa-share"></i>
           </button>
         </div>
