--- a/bookmark-landing-page/index.html
+++ b/bookmark-landing-page/index.html
@@ -106,6 +106,9 @@
           <p>Organize your bookmarks however you like. Our simple drag-and-drop interface
             gives you complete control over how you manage your favourite sites.</p>
         </div>
+        <div class="section__meta">
+          <a href="#" class="button button-primary">More Info</a>
+        </div>
       </div>
     </div>
 
@@ -120,6 +123,9 @@
           <p>Our powerful search feature will help you find saved sites in no time at all. No need to trawl through all
             of your bookmarks.</p>
         </div>
+        <div class="section__meta">
+          <a href="#" class="button button-primary">More Info</a>
+        </div>
       </div>
     </div>
 
@@ -133,6 +139,9 @@
         <div class="section__description">
           <p>Easily share your bookmarks and collections with others. Create a shareable link that you can send at the
             click of a button.</p>
+        </div>
+        <div class="section__meta">
+          <a href="#" class="button button-primary">More Info</a>
         </div>
       </div>
     </div>
@@ -149,7 +158,7 @@
     </div>
 
     <div class="grid">
-      <div class="download__content card">
+      <div class="download__content card" style="--top: 0">
         <div class="card__content">
           <img src="/assets/images/logo-chrome.svg" alt="Chrome logo" class="icon">
           <h3 class="card__title">Add to Chrome</h3>
@@ -161,7 +170,7 @@
         </div>
       </div>
 
-      <div class="download__content card">
+      <div class="download__content card" style="--top: 2rem">
         <div class="card__content">
           <img src="/assets/images/logo-firefox.svg" alt="Firefox logo" class="icon">
           <h3 class="card__title">Add to Firefox</h3>
@@ -173,7 +182,7 @@
         </div>
       </div>
 
-      <div class="download__content card">
+      <div class="download__content card" style="--top: 4rem">
         <div class="card__content">
           <img src="/assets/images/logo-opera.svg" alt="Opera logo" class="icon">
           <h3 class="card__title">Add to Opera</h3>
@@ -269,32 +278,34 @@
 
   <!--========= FOOTER ==========-->
   <footer class="footer">
-    <div class="logo">
-      <img src="/assets/images/logo-bookmark-footer.svg" alt="Bookmark">
-    </div>
-
-    <nav class="nav-footer">
-      <ul class="nav-footer__list">
-        <li class="nav-footer__item">
-          <a href="#">Features</a>
-        </li>
-        <li class="nav-footer__item">
-          <a href="#">Pricing</a>
-        </li>
-        <li class="nav-footer__item">
-          <a href="#">Contact</a>
-        </li>
-      </ul>
-
-      <div class="social-links">
-        <ul class="social-links__list">
-          <li class="social-links__item"><a href="https://facebook.com" class="social-links__link"><i
-                class="fab fa-facebook-square"></i></a></li>
-          <li class="social-links__item"><a href="https://twitter.com" class="social-links__link"><i
-                class="fab fa-twitter"></i></a></li>
-        </ul>
+    <div class="footer__content">
+      <div class="logo">
+        <img src="/assets/images/logo-bookmark-footer.svg" alt="Bookmark">
       </div>
-    </nav>
+
+      <nav class="nav-footer">
+        <ul class="nav-footer__list">
+          <li class="nav-footer__item">
+            <a href="#">Features</a>
+          </li>
+          <li class="nav-footer__item">
+            <a href="#">Pricing</a>
+          </li>
+          <li class="nav-footer__item">
+            <a href="#">Contact</a>
+          </li>
+        </ul>
+
+        <div class="social-links">
+          <ul class="social-links__list">
+            <li class="social-links__item"><a href="https://facebook.com" class="social-links__link"><i
+                  class="fab fa-facebook-square"></i></a></li>
+            <li class="social-links__item"><a href="https://twitter.com" class="social-links__link"><i
+                  class="fab fa-twitter"></i></a></li>
+          </ul>
+        </div>
+      </nav>
+    </div>
   </footer>
 
   <!--========= ATTRIBUTION ==========-->
